// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optionSelector > should work onChang - second selector 1`] = `[Function]`;

exports[`optionSelector > should work onChange - first selector 1`] = `[Function]`;

exports[`optionSelector > should work readonly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__a8s2fv0 styles_direction_horizontal__a8s2fv1"
    >
      <label
        class="styles_default__f32sl0 styles__a8s2fv4 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
      >
        Region
      </label>
      <div
        class="styles_horizontal__a8s2fv6 styles__gqqb10"
      >
        <div
          aria-controls="_r_5g_"
          aria-describedby="_r_5g_"
          class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
          tabindex="-1"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div
              aria-controls="_r_5g_"
              aria-expanded="false"
              class="selectBar__y472cy6 selectBar__y472cy5 selectBar_readOnly_true__y472cy9 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
              data-disabled="false"
              data-readonly="true"
              data-testid="first-selector"
              id="_r_5e_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        class="styles_horizontal__a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <title>
          RayStartArrowIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
        />
        <path
          d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
        />
      </svg>
      <div
        class="styles_horizontal__a8s2fv8 styles__gqqb10"
      >
        <div
          aria-controls="_r_5o_"
          aria-describedby="_r_5o_"
          class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
          tabindex="-1"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div
              aria-controls="_r_5o_"
              aria-expanded="false"
              class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_readOnly_true__y472cy9 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
              data-disabled="true"
              data-readonly="true"
              data-testid="second-selector"
              id="_r_5m_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__y472cy4 style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_31__1yhcak825"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__a8s2fv0 styles_direction_horizontal__a8s2fv1"
    >
      <label
        class="styles_default__f32sl0 styles__a8s2fv4 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
      >
        Region
      </label>
      <div
        class="styles_horizontal__a8s2fv6 styles__gqqb10"
      >
        <div
          aria-controls="_r_6_"
          aria-describedby="_r_6_"
          class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
          tabindex="-1"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div
              aria-controls="_r_6_"
              aria-expanded="false"
              class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
              data-disabled="false"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_4_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        class="styles_horizontal__a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <title>
          RayStartArrowIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
        />
        <path
          d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
        />
      </svg>
      <div
        class="styles_horizontal__a8s2fv8 styles__gqqb10"
      >
        <div
          aria-controls="_r_e_"
          aria-describedby="_r_e_"
          class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
          tabindex="-1"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div
              aria-controls="_r_e_"
              aria-expanded="false"
              class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
              data-disabled="true"
              data-readonly="false"
              data-testid="second-selector"
              id="_r_c_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__y472cy4 style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_31__1yhcak825"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with default values 1`] = `[Function]`;

exports[`optionSelector > should work with direction vertical 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__a8s2fv0 styles_direction_vertical__a8s2fv2"
    >
      <div
        class="styles_vertical__a8s2fv7 styles__gqqb10"
      >
        <div
          aria-controls="_r_o_"
          aria-describedby="_r_o_"
          class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
          tabindex="-1"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <label
              class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              for="_r_m_"
            >
              Region
            </label>
            <div
              aria-controls="_r_o_"
              aria-expanded="false"
              aria-label="Region"
              class="selectBar__y472cy6 selectBar__y472cy5 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
              data-disabled="false"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_m_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__y472cy4 style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        class="styles_vertical__a8s2fvb uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <title>
          RayTopArrowIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M10 2.5c.388 0 .703.315.703.703v11.803l1.829-1.969a.703.703 0 1 1 1.03.957l-3.047 3.281a.703.703 0 0 1-1.03 0l-3.047-3.28a.703.703 0 0 1 1.03-.958l1.829 1.97V3.202c0-.388.315-.703.703-.703"
        />
        <path
          d="M11.875 4.375a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
        />
      </svg>
      <div
        class="styles_vertical__a8s2fv9 styles__gqqb10"
      >
        <div
          aria-controls="_r_12_"
          aria-describedby="_r_12_"
          class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
          tabindex="-1"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <label
              class="styles_htmlFor__f32sl2 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
              for="_r_10_"
            >
              Zone
            </label>
            <div
              aria-controls="_r_12_"
              aria-expanded="false"
              aria-label="Zone"
              class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
              data-disabled="true"
              data-readonly="false"
              data-testid="second-selector"
              id="_r_10_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__y472cy4 style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_31__1yhcak825"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__a8s2fv0 styles_direction_horizontal__a8s2fv1"
    >
      <label
        class="styles_default__f32sl0 styles__a8s2fv4 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodyStrong__1yhcak8n style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
      >
        Region
      </label>
      <div
        class="styles_horizontal__a8s2fv6 styles__gqqb10"
      >
        <div
          aria-controls="_r_4s_"
          aria-describedby="_r_4s_"
          class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
          tabindex="-1"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div
              aria-controls="_r_4s_"
              aria-expanded="false"
              class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
              data-disabled="true"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_4q_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__y472cy4 style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_31__1yhcak825"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <svg
        class="styles_horizontal__a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
        height="20"
        viewBox="0 0 20 20"
        width="20"
      >
        <title>
          RayStartArrowIcon
        </title>
        <path
          clip-rule="evenodd"
          d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
        />
        <path
          d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
        />
      </svg>
      <div
        class="styles_horizontal__a8s2fv8 styles__gqqb10"
      >
        <div
          aria-controls="_r_54_"
          aria-describedby="_r_54_"
          class="styles__pjfil59 styles_fullWidth_true__pjfil5b"
          tabindex="-1"
        >
          <div
            class="styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
          >
            <div
              aria-controls="_r_54_"
              aria-expanded="false"
              class="selectBar__y472cy6 selectBar__y472cy5 selectBar_disabled_true__y472cy7 selectBar_size_large__y472cya selectBar_state_neutral__y472cye"
              data-disabled="true"
              data-readonly="false"
              data-testid="second-selector"
              id="_r_52_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__y472cy4 style__1yhcak80 style_disabled_true__1yhcak81 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_31__1yhcak825"
                style="--whiteSpace__1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="selectBar_large__y472cy2 styles__mxir930 styles_alignItems_center_xxsmall__mxir93d styles_flexDirection_row_xxsmall__mxir932j styles_gap_0.5rem_xxsmall__mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with error - first selector 1`] = `[Function]`;

exports[`optionSelector > should work with error - second selector 1`] = `[Function]`;

exports[`optionSelector > should work with hideWhenEmpty 1`] = `[Function]`;

exports[`optionSelector > should work with only one option 1`] = `[Function]`;

exports[`optionSelector > should work without hideWhenEmpty 1`] = `[Function]`;
